# container-port-env

./: .env.example  .gitignore  Dockerfile  README.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  pytest.ini  requirements.txt  validate-submission.sh
client/: __init__.py  container_env.py
server/: app.py  environment.py  models.py  server.py
server/__pycache__/: __init__.cpython-313.pyc.1828594663216  environment.cpython-313.pyc.1828594650032  models.cpython-313.pyc.2347106454640  server.cpython-313.pyc.2347090514912
tests/: conftest.py  test_env.py  test_openenv_env.py
tests/__pycache__/: test_env.cpython-313-pytest-9.0.2.pyc.16772
