[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-container-port"
version = "0.1.0"
description = "Container yard RL environment for OpenEnv hackathon"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "websockets>=12.0",
    "pydantic>=2.0.0",
    "openenv-core>=0.1.0",
    "openai>=1.0.0",
]
