[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["client", "server"]
py-modules = ["models"]

[project]
name = "openenv-container-port"
version = "0.1.0"
description = "Container yard RL environment"
requires-python = ">=3.10"
dependencies = [
    "openenv-core>=0.2.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.0.0",
    "openai>=1.0.0",
    "websockets>=12.0",
    "huggingface_hub>=0.20.0",
    "pytest>=8.0.0",
]

[project.scripts]
server = "server.app:main"
